testdata/e2e/examples/namespace-template/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-template
spec:
  namespaceTemplate:
    metadata:
      name: foo
      annotations:
        keptn.sh/lifecycle-toolkit: enabled
  steps:
  - try:
    - assert:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: foo
            annotations:
              keptn.sh/lifecycle-toolkit: enabled
